fixed UI bugs on mobile

--- a/assets/styles/src/fields.less
+++ b/assets/styles/src/fields.less
@@ -74,6 +74,7 @@ input:focus {
 
   input {
     width: @input-width;
+    max-width: 100%;
   }
 }
 
