--- a/assets/styles/src/panes.less
+++ b/assets/styles/src/panes.less
@@ -107,11 +107,10 @@
 
 .pane-buttons[data-center="true"] {
   text-align: center;
-  margin-bottom: 10px;
 
   > @{button-selector} {
     float: none;
-    margin: 0 @field-separation;
+    margin: 0 @field-separation 10px @field-separation;
   }
 }
 
